@@ -1,23 +1,15 @@
-amqp==1.4.6
-anyjson==0.3.3
-billiard==3.3.0.20
-cairocffi==0.7.1
-CairoSVG==1.0.15
-celery==3.1.18
-cffi==1.1.2
-cssselect==0.9.1
-Jinja2==2.7.3
-kombu==3.0.26
-lxml==3.4.4
+cairocffi==0.7.2
+CairoSVG==1.0.19
+cffi==1.3.0
+Jinja2==2.8
 MarkupSafe==0.23
-oct==0.3.5
+nose==1.3.7
+numpy==1.10.1
+oct==0.3.6
+oct-turrets==0.1.0
+peewee==2.6.4
 pycparser==2.14
-pygal==1.7.0
-pytz==2015.4
-pyzmq==14.7.0
-requests==2.7.0
-six==1.9.0
+pygal==2.0.10
+pyzmq==15.0.0
+six==1.10.0
 tinycss==0.3
-zmq==0.0.0
-numpy
-peewee
