@@ -131,3 +131,4 @@ required for running a turret. This command will generate a tar archive per turr
 * More informations are stored in the results for the turrets and the report display the last known status of a turret and the associated last update time
 * You can hotplug a turret while a test is running. This turret will appear in the final report
 * The HQ will sleep for 1 second after the creation of the sockets to wait for them
+* Remove the GenericTransaction class in oct.core.generic
